--- a/ui/views/index.html
+++ b/ui/views/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <div class="login-container">
@@ -22,6 +22,6 @@
     </form>
 </div>
 
-<script src="scripts.js"></script>
+<script src="../scripts/scripts.js"></script>
 </body>
 </html>
