--- a/ui/views/main.html
+++ b/ui/views/main.html
@@ -4,16 +4,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat List</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
 <div class="chat-container">
     <h2>Users</h2>
     <div class="chat-list">
-        <!-- Добавьте больше чатов здесь -->
+        <!--  -->
     </div>
 </div>
 
-<script src="main_script.js"></script>
+<script src="../scripts/main_script.js"></script>
 </body>
 </html>
