--- a/ui/views/main.html
+++ b/ui/views/main.html
@@ -14,6 +14,6 @@
     </div>
 </div>
 
-<script src="../scripts/main_script.js"></script>
+<script src="../main_script.js"></script>
 </body>
 </html>
