--- a/ui/views/main.html
+++ b/ui/views/main.html
@@ -7,10 +7,15 @@
     <link rel="stylesheet" href="../styles.css">
 </head>
 <body>
-<div class="chat-container">
-    <h2>Users</h2>
-    <div class="chat-list">
+<div class="main_page">
+    <div class="user container">
         <!--  -->
+    </div>
+    <div class="container">
+        <h2>Users</h2>
+        <div class="chat-list">
+            <!--  -->
+        </div>
     </div>
 </div>
 
